# geodetect

./: CMakeLists.txt  README.md  dotview.html  download.cpp  example_rdp.cpp  geometry.cpp  geometry.hpp  index.cpp  index.hpp  receiver.cpp  receiver.hpp  test.cpp  trigger.sql
data/: 1.txt  1202.txt  1202_result.txt  1742.txt  1742_result.txt  1_result.txt  2650.txt  2650_result.txt  3736.txt  3736_result.txt
